Fix for "jumpy" EFT Fitting box

--- a/styles/all/theme/evebbcode.css
+++ b/styles/all/theme/evebbcode.css
@@ -99,9 +99,9 @@ li.fit-tab a:hover
 	background: black;
 	color: white;
 	font-size: 12px;
-        border: 0px;
-        height: 100%;
-        width: 100%;
+    border: 0px;
+    height: 100% !important;
+    width: 100%;
 }
 
 #fitting {
